--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -15,7 +15,7 @@
 }
 
 /*nav style */
-nav
+.nav
 {
     display:flex;
     align-items: center;
@@ -42,8 +42,7 @@ nav ul li{
     list-style:none; 
     margin-right:50px;
 }
-nav ul li a 
-{text-decoration: none;
+nav ul li a{text-decoration: none;
 font-size:20px}
 /* dark-2 */
 .dark-2{
@@ -78,7 +77,7 @@ font-size:20px}
 {max-width: 580px;}
 .class-description{font-size:18px;
 align-items: center;
-line-spacing:0;
+/* line-spacing:0; */
 }
 /* profile */
 .profile{
@@ -110,19 +109,44 @@ line-spacing:0;
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 130px;
+    
 }
-/* main-style */
- .main {
+/* main-styles */
+main{
     max-width: 1140px;
     margin: 0 auto;
 }
+main section{
+    margin-top:130px;
+    margin-bottom: 130px;
+}
 /* about-iteams */
-.about-iteams {
+.about-items {
     display: flex;
     justify-content: space-around;
     margin-top: 50px;
 }
+.item-title{
+    color:grey;
+}
+.item-description{
+     font-weight:bold;
+     color:FFFFFF;
 
-/* iteam-description */
-.iteam-description{font-weight: 600px ;}
+}
+/* skills section styles */
+.skills-container{
+    display:flex;
+    gap:24px;
+}
+.skill{
+    padding:30px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.6);
+    border-radius: 5px;
+}
+
+
+/* shared styles */
+.text-center {
+    text-align: center;
+}
